@startuml

'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

package MealsDelivered-Aggregate <<Cloud>> {

    package Meal-Aggregate <<Cloud>> {
      class Meal <<AggregateRoot>>
      class Dish <<AggregateRoot>>
      class MealType <<ValueObject>>
      class Calendar <<ValueObject>>
    }
    class MealsDelivered <<AggregateRoot>>
    class Quantity <<ValueObject>>
}

MealsDelivered "1" --> "1" Meal : references
MealsDelivered "1" --> "1" Quantity : has
Meal "*" --> "1" Dish : has
Meal "*" --> "1" MealType : has
Meal "*" --> "1" Calendar : has

@enduml